force-app/main/default/objects/Property_Sales_history__c/Property_Sales_history__c.object-meta.xml
<CustomObject>
    <description>All available liens / mortgages, including those that existed under prior owners.</description>
    <label>Property Sales history</label>
    <nameField>
        <label>Property Sales history Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property Sales history</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>