force-app/main/default/objects/Property_Sales_history__c/fields/amount__c.field-meta.xml
<CustomField>
    <fullName>amount__c</fullName>
    <description>Amount in dollars that the property sold for</description>
    <inlineHelpText>Amount in dollars that the property sold for</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>