force-app/main/default/objects/Property_Sales_history__c/fields/event_type__c.field-meta.xml
<CustomField>
    <fullName>event_type__c</fullName>
    <description>Type of sale</description>
    <inlineHelpText>Type of sale</inlineHelpText>
    <label>Event Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>