force-app/main/default/objects/Property_Sales_history__c/fields/fips__c.field-meta.xml
<CustomField>
    <fullName>fips__c</fullName>
    <description>5-digit Federal Information Processing Standards county code</description>
    <inlineHelpText>5-digit Federal Information Processing Standards county code</inlineHelpText>
    <label>FIPS</label>
    <length>6</length>
    <type>Text</type>
</CustomField>