force-app/main/default/objects/Property_Sales_history__c/fields/grantee_1__c.field-meta.xml
<CustomField>
    <fullName>grantee_1__c</fullName>
    <description>Last name of first person listed on deed</description>
    <inlineHelpText>Last name of first person listed on deed</inlineHelpText>
    <label>Grantee 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>