force-app/main/default/objects/Property_Sales_history__c/fields/grantee_2_forenames__c.field-meta.xml
<CustomField>
    <fullName>grantee_2_forenames__c</fullName>
    <description>First name of second person listed on deed</description>
    <inlineHelpText>First name of second person listed on deed</inlineHelpText>
    <label>Grantee 2 Forenames</label>
    <length>50</length>
    <type>Text</type>
</CustomField>