force-app/main/default/objects/Property_Sales_history__c/fields/grantor_1__c.field-meta.xml
<CustomField>
    <fullName>grantor_1__c</fullName>
    <description>Name of the primary financier of the deed</description>
    <inlineHelpText>Name of the primary financier of the deed</inlineHelpText>
    <label>Grantor 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>