force-app/main/default/objects/Property_Sales_history__c/fields/grantor_2__c.field-meta.xml
<CustomField>
    <fullName>grantor_2__c</fullName>
    <description>Name of the secondary financier of the deed</description>
    <inlineHelpText>Name of the secondary financier of the deed</inlineHelpText>
    <label>Grantor 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>