force-app/main/default/objects/Property_Sales_history__c/fields/record_page__c.field-meta.xml
<CustomField>
    <fullName>record_page__c</fullName>
    <description>Record page of the lien in the county recorder. A unique transaction in many counties may be defined in the recorder’s books by a unique: record_book, record_page, record_doc.</description>
    <inlineHelpText>Record page of the lien in the county recorder. A unique transaction in many counties may be defined in the recorder’s books by a unique: record_book, record_page, record_doc.</inlineHelpText>
    <label>Record Page</label>
    <length>40</length>
    <type>Text</type>
</CustomField>