force-app/main/default/objects/Property_Sales_history__c/fields/RelatedProperty__c.field-meta.xml
<CustomField>
    <fullName>RelatedProperty__c</fullName>
    <label>RelatedProperty</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Property Sales history</relationshipLabel>
    <relationshipName>Property_Sales_history</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>